namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    env: testing
    team: devops
